--- a/index.html
+++ b/index.html
@@ -5,11 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FreeSpace Anticafe</title>
+    <link rel="stylesheet" type="text/css" href="index.css">
+    <style type="text/css"></style>
 </head>
 <body>
-    <header>
-        <h1>FreeSpace</h1>
-    </header>
+    <div id="header"><h1 alignS="left">FreeSpace</h1>
+<ul align="right">
+    <il>vdg</il>
+    <il>gdg</il>
+    <il>dgd</il>
+    <il>gd</il>
+    <il>dgd</il>
+    <il>gdd</il>
+    <il>dgg</il>
+</ul>
+    </div>
+    </div>
     <main> 
         <div class="our-rooms">
             <h1>Our rooms</h1>
