--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div id="header"><h1 alignS="left">FreeSpace</h1>
 <ul align="right">
-    <il>vdg</il>
+    <il><a href="#our-rooms">grgr</a></il>
     <il>gdg</il>
     <il>dgd</il>
     <il>gd</il>
@@ -19,7 +19,6 @@
     <il>gdd</il>
     <il>dgg</il>
 </ul>
-    </div>
     </div>
     <main> 
         <div class="our-rooms">
