--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <style type="text/css"></style>
 </head>
 <body>
-    <div id="header"><h1 aligns="left">FreeSpace</h1>
-<ul aligns="center">
+    <div id="header"><h1 align="left">FreeSpace</h1>
+<ul align="center">
     <il><a href="#Concept">Concept</a></il>
     <il><a href="#What">What you can do</a></il>
     <il><a href="#Rooms">Rooms</a></il>
