Add img to header

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <il><a href="#Contacts">Contacts</a></il>
 </ul>
 </div>
+<div id="header_bg">
+ <img src="img/header.jpg" width="100%" align="center">
+</div>
     <main> 
         <div id="Rooms" class="our-rooms">
             <h2>Our rooms</h2>
