--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </div>
         </div>
               
-        <div class="Gallery">
+        <div  id="Gallery" class="Gallery">
             <h1>Gallery</h1>>
             <img src="https://res2.weblium.site/res/5c978eb27eb528002503b138/5c98ccb5a33ca000252f55ab_optimized_600_c600x418-0x0">
             <img src="https://res2.weblium.site/res/5c978eb27eb528002503b138/5c98cccca33ca000252f55bd_optimized_600">
