added by  membership

--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
                 <a href="">LEARN MORE</a>
                 <img src="img/lounge-room.webp" alt="Lounge room">
             </div>
+            <div klass="Membership">
+                <h2>Membership</h2>
+                <h3>Enjoy yourself at FreeSpace? Now you can visit FreeSpace every day with your own FreeSpace Club Membership. Get exclusive access to your favorite FreeSpace outlet for less than $30 a day! For $300 you can use all of our facilities the entire month.</h3>
+        <span class="button1">Become a member</span>
+            </div>          
+            
             <div class="meeting-room">
                 <h3>Meeting room</h3>
                 <p>A multifunctional meeting room sits 8 people and offers a quiet experience for small groups of people. Here, you can strike a deal or have a job interview.</p>
