--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </div>
         </div>
         
-        <div>
+        <div id="Enents">
             <h2>Events calendar</h2> 
             <div class="halloween-party">
                 <img src="https://res2.weblium.site/res/5c978eb27eb528002503b138/5c98e52fa33ca000252f74af_optimized_1396.webp" alt="Halloween party">
@@ -99,7 +99,7 @@
             <img src="https://res2.weblium.site/res/5bfbb293c074c20023d08512/5bfbc53586508000255602dd_optimized_600">
         </div>
         
-        <div class="Our Location">
+        <div id="Contacts" class="Our Location">
             <h2>Our Location</h2>
             <div class="map" >Imaginary map</div>
             <h2>FreeSpace</h2>
