--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </div>
         </div>
         
-        <div id="Enents">
+        <div id="Events">
             <h2>Events calendar</h2> 
             <div class="halloween-party">
                 <img src="https://res2.weblium.site/res/5c978eb27eb528002503b138/5c98e52fa33ca000252f74af_optimized_1396.webp" alt="Halloween party">
