--- a/index.html
+++ b/index.html
@@ -37,8 +37,36 @@
             <div klass="Membership">
                 <h2>Membership</h2>
                 <h3>Enjoy yourself at FreeSpace? Now you can visit FreeSpace every day with your own FreeSpace Club Membership. Get exclusive access to your favorite FreeSpace outlet for less than $30 a day! For $300 you can use all of our facilities the entire month.</h3>
-        <span class="button1">Become a member</span>
-            </div>          
+        <span class="button1" href="#Contacts">Become a member</span>
+            </div>   
+            <div klass="Pricing">
+                <h2>Pricing</h2>
+                <div klass="Day-Pass">
+                    <div><img src="#"></div>
+                    <h3>Day Pass</h3>
+                    <h2>$25</h2>
+                    <h4>per day</h4>
+                    <h3>The Day Pass provides full access during our day hours, 8am to 10pm. This includes an unlimited access to space, facilities, and equipment.</h3>
+                    <span class="button-purchase" href="#Contacts">purchase</span>
+                </div>
+                <div klass="Nightly Pass">
+                    <h3>Nightly Pass</h3>   
+                    <div><img src="#"></div>                
+                    <h2>$15</h2>
+                    <h4>per night</h4>
+                    <h3>The Nightly Pass provides full access during our night-time hours. Night access at FreeSpace anti-cafe is fully automated, and so customers will receive a key fob.</h3>
+                    <span class="button-purchase" href="#Contacts">purchase</span>
+                </div>
+                <div klass="7-Day Pass">
+                    <h3>7-Day Pass</h3>
+                    <div><img src="#"></div>
+                    <h2>$125</h2>
+                    <h4>one week</h4>
+                    <h3>With the 7-Day Pass customers can pick and choose which days they want to come in during daily hours. You get full access to the space and equipment for 7 days.</h3>
+                    <span class="button-purchase" href="#Contacts">purchase</span>
+                </div>
+
+            </div>      
             
             <div class="meeting-room">
                 <h3>Meeting room</h3>
