--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div klass="Pricing">
             <h2>Pricing</h2>
             <div klass="Day-Pass">
-                <div><img src="#"></div>
+                <img src="img/day.svg" alt="Day-Pass"> 
                 <h3>Day Pass</h3>
                 <h2>$25</h2>
                 <h4>per day</h4>
@@ -71,15 +71,15 @@
             </div>
             <div klass="Nightly Pass">
                 <h3>Nightly Pass</h3>   
-                <div><img src="#"></div>                
+                <img src="img/night.svg" alt="Nightly Pass">              
                 <h2>$15</h2>
                 <h4>per night</h4>
                 <h3>The Nightly Pass provides full access during our night-time hours. Night access at FreeSpace anti-cafe is fully automated, and so customers will receive a key fob.</h3>
                 <span class="button-purchase" href="#Contacts">purchase</span>
             </div>
-            <div klass="7-Day Pass">
+            <div klass="7-Day Pass" >
                 <h3>7-Day Pass</h3>
-                <div><img src="#"></div>
+                <img src="img/7day.svg" alt="7-Day Pass">
                 <h2>$125</h2>
                 <h4>one week</h4>
                 <h3>With the 7-Day Pass customers can pick and choose which days they want to come in during daily hours. You get full access to the space and equipment for 7 days.</h3>
