--- a/index.html
+++ b/index.html
@@ -9,17 +9,19 @@
     <style type="text/css"></style>
 </head>
 <body>
+    <header>
     <div id="header"><h1 align="left">FreeSpace</h1>
         <ul align="center">
-            <il><a href="#Concept">Concept</a></il>
-            <il><a href="#What">What you can do</a></il>
-            <il><a href="#Rooms">Rooms</a></il>
-            <il><a href="#Pricing">Pricing</a></il>
-            <il><a href="#Events">Events</a></il>
-            <il><a href="#Gallery">Gallery</a></il>
-            <il><a href="#Contacts">Contacts</a></il>
+            <li><a href="#Concept">Concept</a></il>
+            <li><a href="#What">What you can do</a></il>
+            <li><a href="#Rooms">Rooms</a></il>
+            <li><a href="#Pricing">Pricing</a></il>
+            <li><a href="#Events">Events</a></il>
+            <li><a href="#Gallery">Gallery</a></il>
+            <li><a href="#Contacts">Contacts</a></il>
         </ul>
     </div>
+    </header>
     <div id="header_bg">
         <img src="img/header.jpg" width="100%" align="center">
     </div>
