--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <header>
         <div id="header"><h1 align="left">FreeSpace</h1>
              <ul align="center">
-                <li><a href="#Concept">Concept</a></il>
-                <li><a href="#What">What you can do</a></il>
-                <li><a href="#Rooms">Rooms</a></il>
-                <li><a href="#Pricing">Pricing</a></il>
-                <li><a href="#Events">Events</a></il>
-                <li><a href="#Gallery">Gallery</a></il>
-                <li><a href="#Contacts">Contacts</a></il>
+                <li><a href="#Concept">Concept</a></li>
+                <li><a href="#What">What you can do</a></li>
+                <li><a href="#Rooms">Rooms</a></li>
+                <li><a href="#Pricing">Pricing</a></li>
+                <li><a href="#Events">Events</a></li>
+                <li><a href="#Gallery">Gallery</a></li>
+                <li><a href="#Contacts">Contacts</a></li>
             </ul>
         </div>
     </header>
