--- a/index.html
+++ b/index.html
@@ -26,6 +26,28 @@
     </div>
     
     <main> 
+
+        <div id="#What" class="what-can-you-do">
+            <h2>What Can You Do</h2>
+            <div>
+                <div>
+                   <h3>Work</h3>
+                   <p>Surf on very high-speed WiFi, use office appliances, and enjoy the vibe of our creative environment.</p>
+                   <img src="img/what-you-can-do/working table.webp" alt="Working table"> 
+                </div>
+                <div>
+                    <h3>Communicate</h3>
+                    <p>Gather at the table and share ideas; book a table, a room, or an entire FreeSpace.</p>
+                    <img src="img/what-you-can-do/business meeting.webp" alt="Business meeting"> 
+                 </div>
+                 <div>
+                    <h3>Enjoy snacks & drinks</h3>
+                    <p>Drink unlimited amounts of coffee, tea, and fresh drinks; eat sweets and snacks for as much as you can.</p>
+                    <img src="img/what-you-can-do/coffee break.webp" alt="Coffee break"> 
+                 </div>
+            </div>
+        </div>
+    
         <div id="Rooms" class="our-rooms">
             <h2>Our rooms</h2>
             <div>
