--- a/index.html
+++ b/index.html
@@ -191,7 +191,17 @@
     </main>
     
     <footer> 
-        
+        <div><h1 align="left">FreeSpace</h1>
+             <ul align="center">
+                <li><a href="#Concept">Concept</a></li>
+                <li><a href="#What">What you can do</a></li>
+                <li><a href="#Rooms">Rooms</a></li>
+                <li><a href="#Pricing">Pricing</a></li>
+                <li><a href="#Events">Events</a></li>
+                <li><a href="#Gallery">Gallery</a></li>
+                <li><a href="#Contacts">Contacts</a></li>
+            </ul>
+        </div>
     </footer>
 </body>
 </html>
