--- a/index.html
+++ b/index.html
@@ -202,6 +202,11 @@
                 <li><a href="#Contacts">Contacts</a></li>
             </ul>
         </div>
+        <div>
+            <span>Enter your email and get our latest news.</span><br>
+            <input type="text" placeholder="Email*" required>
+            <button type="submit">Subscribe</button>
+        </div>
     </footer>
 </body>
 </html>
