Creaty What You Get For Free

--- a/index.html
+++ b/index.html
@@ -47,7 +47,64 @@
                  </div>
             </div>
         </div>
-    
+        <div class="what-you-get-for-free">
+            <h2>What You Get for Free</h2>
+            <div>
+                <div>
+                 <h3>POWER SOCCKETS</h3>   
+                 <img src="img/what-you-get-for-free/plug for socket.svg" alt="Plug For Socket"> 
+                </div>
+                <div>
+                    <h3>POWER SOCCKETS</h3>   
+                    <img src="img/what-you-get-for-free/plug for socket.svg" alt="Plug For Socket"> 
+                   </div>
+                   <div>
+                    <h3>WI-FI</h3>   
+                    <img src="img/what-you-get-for-free/wifi.png" alt="WI-FI"> 
+                   </div>
+                   <div>
+                    <h3>COWORKING SPACE</h3>    
+                    <img src="img/what-you-get-for-free/dialogue.svg" alt="Dialogue"> 
+                   </div>
+                   <div>
+                    <h3>PRINTER / SCANNER</h3>   
+                    <img src="img/what-you-get-for-free/a printer.svg" alt="Printer"> 
+                   </div>
+                   <div>
+                    <h3>HOT & COLD DRINKS</h3>   
+                    <img src="img/what-you-get-for-free/drinks.svg" alt="Drinks"> 
+                   </div>
+                   <div>
+                    <h3>DELICIOUS SNACKS</h3>   
+                    <img src="img/what-you-get-for-free/cupcakes.svg" alt="Cupcakes"> 
+                   </div>
+                   <div>
+                    <h3>BOARD GAMES</h3>   
+                    <img src="img/what-you-get-for-free/board games.svg" alt="Game Cards"> 
+                   </div>
+                   <div>
+                    <h3>QUIET ROOM</h3>   
+                    <img src="img/what-you-get-for-free/quite room.svg" alt="Quiet room"> 
+                   </div>
+                   <div>
+                    <h3>SKYPE BOOTHS</h3>   
+                    <img src="img/what-you-get-for-free/skype booths.svg" alt="Skype"> 
+                   </div>
+                   <div>
+                    <h3>NETWORK OF START-UPS</h3>   
+                    <img src="img/what-you-get-for-free/rocket.svg" alt="Rocket"> 
+                   </div>
+                   <div>
+                    <h3>FRIENDLY STAFF</h3>   
+                    <img src="img/what-you-get-for-free/plug for socket.svg" alt="Friendly heart"> 
+                   </div>
+                   <div>
+                    <h3>GREAT ATMOSPHERE</h3>   
+                    <img src="img/what-you-get-for-free/chat with friends.svg" alt="Freandly Atmoshere"> 
+                   </div>
+            </div>
+  
+        </div>
         <div id="Rooms" class="our-rooms">
             <h2>Our rooms</h2>
             <div>
