Correction of errors in the code

--- a/index.html
+++ b/index.html
@@ -51,13 +51,9 @@
             <h2>What You Get for Free</h2>
             <div>
                 <div>
-                 <h3>POWER SOCCKETS</h3>   
+                 <h3>POWER SOCKETS</h3>   
                  <img src="img/what-you-get-for-free/plug for socket.svg" alt="Plug For Socket"> 
                 </div>
-                <div>
-                    <h3>POWER SOCCKETS</h3>   
-                    <img src="img/what-you-get-for-free/plug for socket.svg" alt="Plug For Socket"> 
-                   </div>
                    <div>
                     <h3>WI-FI</h3>   
                     <img src="img/what-you-get-for-free/wifi.png" alt="WI-FI"> 
