--- a/index.html
+++ b/index.html
@@ -56,57 +56,58 @@
                  </div>
             </div>
         </div>
+        
         <div class="what-you-get-for-free">
             <h2>What You Get for Free</h2>
             <div>
                 <div>
-                 <h3>POWER SOCKETS</h3>   
-                 <img src="img/what-you-get-for-free/plug for socket.svg" alt="Plug For Socket"> 
+                    <h3>POWER SOCKETS</h3>   
+                    <img src="img/what-you-get-for-free/plug for socket.svg" alt="Plug For Socket"> 
                 </div>
-                   <div>
-                    <h3>WI-FI</h3>   
+                <div>
+                    <p>WI-FI</p>   
                     <img src="img/what-you-get-for-free/wifi.png" alt="WI-FI"> 
-                   </div>
-                   <div>
-                    <h3>COWORKING SPACE</h3>    
+                </div>
+                <div>
+                    <p>COWORKING SPACE</p>    
                     <img src="img/what-you-get-for-free/dialogue.svg" alt="Dialogue"> 
-                   </div>
-                   <div>
-                    <h3>PRINTER / SCANNER</h3>   
+                </div>
+                <div>
+                    <p>PRINTER / SCANNER</p>   
                     <img src="img/what-you-get-for-free/a printer.svg" alt="Printer"> 
-                   </div>
-                   <div>
-                    <h3>HOT & COLD DRINKS</h3>   
+                </div>
+                <div>
+                    <p>HOT & COLD DRINKS</p>   
                     <img src="img/what-you-get-for-free/drinks.svg" alt="Drinks"> 
-                   </div>
-                   <div>
-                    <h3>DELICIOUS SNACKS</h3>   
+                </div>
+                <div>
+                    <p>DELICIOUS SNACKS</p>   
                     <img src="img/what-you-get-for-free/cupcakes.svg" alt="Cupcakes"> 
-                   </div>
-                   <div>
-                    <h3>BOARD GAMES</h3>   
+                </div>
+                <div>
+                    <p>BOARD GAMES</p>   
                     <img src="img/what-you-get-for-free/board games.svg" alt="Game Cards"> 
-                   </div>
-                   <div>
-                    <h3>QUIET ROOM</h3>   
+                </div>
+                <div>
+                    <p>QUIET ROOM</p>   
                     <img src="img/what-you-get-for-free/quite room.svg" alt="Quiet room"> 
-                   </div>
-                   <div>
-                    <h3>SKYPE BOOTHS</h3>   
+                </div>
+                <div>
+                    <p>SKYPE BOOTHS</p>   
                     <img src="img/what-you-get-for-free/skype booths.svg" alt="Skype"> 
-                   </div>
-                   <div>
-                    <h3>NETWORK OF START-UPS</h3>   
+                </div>
+                <div>
+                    <p>NETWORK OF START-UPS</p>   
                     <img src="img/what-you-get-for-free/rocket.svg" alt="Rocket"> 
-                   </div>
-                   <div>
-                    <h3>FRIENDLY STAFF</h3>   
+                </div>
+                <div>
+                    <p>FRIENDLY STAFF</p>   
                     <img src="img/what-you-get-for-free/plug for socket.svg" alt="Friendly heart"> 
-                   </div>
-                   <div>
-                    <h3>GREAT ATMOSPHERE</h3>   
+                </div>
+                <div>
+                    <p>GREAT ATMOSPHERE</p>   
                     <img src="img/what-you-get-for-free/chat with friends.svg" alt="Freandly Atmoshere"> 
-                   </div>
+                </div>
             </div>
   
         </div>
