Upd 0.12 (fix code, css)

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FreeSpace Anticafe</title>
-    <link rel="stylesheet" type="text/css" href="index.css">
+    <link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 <body>
     <header>
-        <div id="header"><h1 align="left">FreeSpace</h1>
+        <div class="header" id="header"><h1 align="left">FreeSpace</h1>
              <ul align="center">
                 <li><a href="#Concept">Concept</a></li>
                 <li><a href="#What">What you can do</a></li>
@@ -23,8 +23,7 @@
     </header>
     <div id="header_bg">
         <img src="img/header/header.jpg" width="100%" align="center">
-        <h1>Everything is free.</h1>
-            <h1>Except for the time you spend.</h1>
+        <div class="hero">EVERYTHING IS FREE.<br>Except for the time you spend.</div>
             <button type="3d-tour">3D TOUR</button>
             
     </div>
@@ -61,12 +60,12 @@
             <h2>What You Get for Free</h2>
             <div class="get-free">
                 <div class="power-sockets">
-                    <h3>POWER SOCKETS</h3>   
+                    <p>Power sockets Gg</p>   
                     <img src="img/what-you-get-for-free/plug for socket.svg" alt="Plug For Socket"> 
                 </div>
                 <div class="wi-fi">
                     <p>WI-FI</p>   
-                    <img src="img/what-you-get-for-free/wifi.png" alt="WI-FI"> 
+                    <img src="img/what-you-get-for-free/wifi.svg" alt="WI-FI"> 
                 </div>
                 <div class="coworking-space">
                     <p>COWORKING SPACE</p>    
@@ -74,7 +73,7 @@
                 </div>
                 <div class="printer">
                     <p>PRINTER / SCANNER</p>   
-                    <img src="img/what-you-get-for-free/a printer.svg" alt="Printer"> 
+                    <img src="img/what-you-get-for-free/printer.svg" alt="Printer"> 
                 </div>
                 <div class="drinks">
                     <p>HOT & COLD DRINKS</p>   
@@ -102,7 +101,7 @@
                 </div>
                 <div class="friendly-staff">
                     <p>FRIENDLY STAFF</p>   
-                    <img src="img/what-you-get-for-free/plug for socket.svg" alt="Friendly heart"> 
+                    <img src="img/what-you-get-for-free/friendly staff.svg" alt="Friendly heart"> 
                 </div>
                 <div class="great-atmosphere">
                     <p>GREAT ATMOSPHERE</p>   
