--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                     <h2>$25</h2>
                     <h4>per day</h4>
                     <h3>The Day Pass provides full access during our day hours, 8am to 10pm. This includes an unlimited access to space, facilities, and equipment.</h3>
-                    <span class="button-purchase" href="#Form">purchase</span>
+                    <span class="button-purchase"><a href="#Form">purchase</a></span>
                 </div>
                 <div class="Nightly Pass">
                     <h3>Nightly Pass</h3>   
@@ -165,7 +165,7 @@
                     <h2>$15</h2>
                     <h4>per night</h4>
                     <h3>The Nightly Pass provides full access during our night-time hours. Night access at FreeSpace anti-cafe is fully automated, and so customers will receive a key fob.</h3>
-                    <span class="button-purchase" href="#Form">purchase</span>
+                    <span class="button-purchase"><a href="#Form">purchase</a></span>
                 </div>
                 <div class="7-Day Pass" >
                     <h3>7-Day Pass</h3>
@@ -173,7 +173,7 @@
                     <h2>$125</h2>
                     <h4>one week</h4>
                     <h3>With the 7-Day Pass customers can pick and choose which days they want to come in during daily hours. You get full access to the space and equipment for 7 days.</h3>
-                    <span class="button-purchase" href="#Form">purchase</span>
+                    <span class="button-purchase"><a href="#Form">purchase</a></span>
                 </div>
             </div>
         </div>
