--- a/index.html
+++ b/index.html
@@ -41,17 +41,17 @@
                 <div class="work">
                    <h3>Work</h3>
                    <p>Surf on very high-speed WiFi, use office appliances, and enjoy the vibe of our creative environment.</p>
-                   <img src="img/what-you-can-do/working table.webp" alt="Working table"> 
+                   <img src="img/what-you-can-do/working-table.webp" alt="Working table"> 
                 </div>
                 <div class="comunicate">
                     <h3>Communicate</h3>
                     <p>Gather at the table and share ideas; book a table, a room, or an entire FreeSpace.</p>
-                    <img src="img/what-you-can-do/business meeting.webp" alt="Business meeting"> 
+                    <img src="img/what-you-can-do/business-meeting.webp" alt="Business meeting"> 
                  </div>
                  <div class="snacks-drinks">
                     <h3>Enjoy snacks & drinks</h3>
                     <p>Drink unlimited amounts of coffee, tea, and fresh drinks; eat sweets and snacks for as much as you can.</p>
-                    <img src="img/what-you-can-do/coffee break.webp" alt="Coffee break"> 
+                    <img src="img/what-you-can-do/coffee-break.webp" alt="Coffee break"> 
                  </div>
             </div>
         </div>
