--- a/index.html
+++ b/index.html
@@ -267,9 +267,9 @@
             <h3>E-mail</h3>
             <p>Algebra311231@gmail.com</p>
             
-            <img src="img/our-location/instagram.svg"  class="Instagram" href="https://www.instagram.com" alt="#">
-            <img src="img/our-location/facebook.svg"  class="Facebook" href="https://www.facebook.com" alt="#">
-            <img src="img/our-location/youtube.svg"  class="Youtube" href="https://www.youtube.com" alt="#">
+            <a href="https://www.instagram.com"><img src="img/our-location/instagram.svg"    alt="Instagram"></a>
+            <a  href="https://www.facebook.com"><img src="img/our-location/facebook.svg"   alt="Facebook"></a>
+            <a  href="https://www.youtube.com"><img src="img/our-location/youtube.svg"   alt="Youtube"></a>
         </div>
 
         <div id="Form" сlass="form-to-fill">
