--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div id="header_bg">
         <img src="img/header/header.jpg" width="100%" align="center">
         <div class="hero">EVERYTHING IS FREE.<br>Except for the time you spend.</div>
-            <button type="3d-tour">3D TOUR</button>
+            <button type="">3D TOUR</button>
             
     </div>
     
@@ -32,7 +32,7 @@
         <div class="concept">
             <h2>Concept</h2>
             <p>A new concept of entertainment, working and learning the public place. You can spend here time with friends, co-work, or rent a room for a private event. What makes it special is the absence of regular food and beverage menu — visitors pay only for the time spent, while all other services are complimentary.</p>
-            <button type="learn-more">LEARN MORE</button>
+            <button type="">LEARN MORE</button>
         </div>
 
         <div id="What" class="what-can-you-do">
