--- a/index.html
+++ b/index.html
@@ -269,8 +269,7 @@
             
             <a href="https://www.instagram.com"><img src="img/our-location/instagram.svg"    alt="Instagram"></a>
             <a  href="https://www.facebook.com"><img src="img/our-location/facebook.svg"   alt="Facebook"></a>
-            <a  href="https://www.youtube.com"><img src="img/our-location/youtube.svg"   alt="Youtube"></a>
-        </div>
+            <a  href="https://www.youtube.com"><img src="img/our-location/youtube.svg"   alt="youtube"></a>
 
         <div id="Form" сlass="form-to-fill">
             <h2>Enjoy yourself at FreeSpace?</h2>
