--- a/index.html
+++ b/index.html
@@ -267,9 +267,9 @@
             <h3>E-mail</h3>
             <p>Algebra311231@gmail.com</p>
             
-            <a href="https://www.instagram.com/%22%3E<img src="> <img src="img/our-location/instagram.svg"  alt="Instagram"></a>
-            <a  href="https://www.facebook.com/%22%3E<img src="><img src="img/our-location/facebook.svg"  alt="Facebook"></a>
-            <a  href="https://www.youtube.com/%22%3E<img src="><img src="img/our-location/youtube.svg"   alt="Youtube"></a>
+            <a href="https://www.instagram.com/%22%3E> <img src="img/our-location/instagram.svg"  alt="Instagram"></a>
+            <a  href="https://www.facebook.com/%22%3E><img src="img/our-location/facebook.svg"  alt="Facebook"></a>
+            <a  href="https://www.youtube.com/%22%3E><img src="img/our-location/youtube.svg"   alt="Youtube"></a>
         </div>
 
         <div id="Form" class="form-to-fill">
