Create css code for header button

--- a/index.html
+++ b/index.html
@@ -34,7 +34,15 @@
                         </div>
                     </div>
                 </div>
-                <button class="button">3D TOUR</button>
+                <div class="hero-button">
+                    <div class="inbutton">
+                        <div class="inbutton-space">
+                            <div class="space-button">
+                                <button class="button">3D TOUR</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </header>
