Create css for pice of footer

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             </div>
         </div>
         
-        <div class="membership">
+        <div class="membership" id="Membership">
             <h2>Membership</h2>
             <h3>Enjoy yourself at FreeSpace? Now you can visit FreeSpace every day with your own FreeSpace Club Membership. Get exclusive access to your favorite FreeSpace outlet for less than $30 a day! For $300 you can use all of our facilities the entire month.</h3>
             <form action="#Form">
@@ -294,14 +294,17 @@
     </main>
     
     <footer> 
-        <div><h1>FreeSpace</h1>
-             <ul align="center">
+        <h1>FreeSpace</h1>
+        <div class="footer-link-conteiner">
+            <ul>
                 <li><a href="#Concept">Concept</a></li>
                 <li><a href="#What">What you can do</a></li>
-                <li><a href="#Rooms">Rooms</a></li>
+                <li class="foot-marign"><a href="#Rooms">Rooms</a></li>
                 <li><a href="#Pricing">Pricing</a></li>
-                <li><a href="#Events">Events</a></li>
+                <li><a href="#Pricing">Pricing</a></li>
+                <li class="foot-marign"><a href="#Events">Events</a></li>
                 <li><a href="#Gallery">Gallery</a></li>
+                <li><a href="#Membership">Membership</a></li>
                 <li><a href="#Contacts">Contacts</a></li>
             </ul>
         </div>
