Upload css class button

--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
         <div>
             <span>Enter your email and get our latest news.</span><br>
             <input type="text" placeholder="Email*" required>
-            <button type="submit">Subscribe</button>
+            <button class="button">Subscribe</button>
         </div>
     </footer>
 </body>
