add background in membership end correct some element

--- a/index.html
+++ b/index.html
@@ -189,15 +189,15 @@
             </div>
         </div>
         
-        <div class="membership" id="membership">
+        <div class="membership"  >
             <h2 id="membership-h2">Membership</h2>
-            <h3>Enjoy yourself at FreeSpace? Now you can visit FreeSpace every day with your own FreeSpace Club Membership. Get exclusive access to your favorite FreeSpace outlet for less than $30 a day! For $300 you can use all of our facilities the entire month.</h3>
+            <p id="membership">Enjoy yourself at FreeSpace? Now you can visit FreeSpace every day with your own FreeSpace Club Membership. Get exclusive access to your favorite FreeSpace outlet for less than $30 a day! For $300 you can use all of our facilities the entire month.</p>
             <form action="#Form">
-                <button class="button" id="membership-button"><a id="membership-text-button">Become a member</a></button>
+                <button class="button" id="membership-button">Become a member</button>
             </form> 
         </div>
         
-        <div id="Pricing" class="pricing">
+        <div id="pricing" class="pricing">
             <h2>Pricing</h2>
             <div class="pricing">
                 <div class="Day-Pass">
