--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
             <br><input type="text" placeholder="Enter your full name*" required>
             <br><input type="text" placeholder="Enter your phone number*" required>
             <br><input type="text" placeholder="Enter your e-mail*" required>
-            <button class="button" id="membership-button"><a id="membership-text-button">Become a member</a></button>
+            <button class="button" id="membership-button">Become a member</button>
         </div>
     </main>
     
