debag element in membership

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
             <h2 id="membership-h2">Membership</h2>
             <p id="membership">Enjoy yourself at FreeSpace? Now you can visit FreeSpace every day with your own FreeSpace Club Membership. Get exclusive access to your favorite FreeSpace outlet for less than $30 a day! For $300 you can use all of our facilities the entire month.</p>
             <form action="#Form">
-                <button class="button" id="membership-button">Become a member</button>
+                <button class="button" >Become a member</button>
             </form> 
         </div>
         
@@ -327,7 +327,7 @@
             <br><input type="text" placeholder="Enter your full name*" required>
             <br><input type="text" placeholder="Enter your phone number*" required>
             <br><input type="text" placeholder="Enter your e-mail*" required>
-            <button class="button" id="membership-button">Become a member</button>
+            <button class="button">Become a member</button>
         </div>
     </main>
     
