--- a/index.html
+++ b/index.html
@@ -12,25 +12,19 @@
 
 <body>
     <header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">FreeSpace</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
-        <a class="nav-link" href="#Concept">Concept</a>
-        <a class="nav-link" href="#What">What you can do</a>
-        <a class="nav-link" href="#Rooms">Rooms</a>
-        <a class="nav-link" href="#Pricing">Pricing</a>
-        <a class="nav-link" href="#Events">Events</a>
-        <a class="nav-link" href="#Gallery">Gallery</a>
-        <a class="nav-link" href="#Contacts">Contacts</a>
-      </div>
-    </div>
-  </div>
-</nav>        
+      <div class="header" id="header">
+        <h1>FreeSpace</h1>
+        <div class="link-container">
+            <a href="#Concept">Concept</a>
+            <a href="#What">What you can do</a>
+            <a href="#Rooms">Rooms</a>
+            <a href="#Pricing">Pricing</a>
+            <a href="#Events">Events</a>
+            <a href="#Gallery">Gallery</a>
+            <a href="#Contacts">Contacts</a>
+        </div>
+
+      </div>        
         <div class="header-bg">
             <div id="header_bg">
                 <div class="hero">
