--- a/index.html
+++ b/index.html
@@ -190,8 +190,8 @@
         </div>
         
         <div class="membership"  >
-            <h2 id="membership-h2">Membership</h2>
-            <p id="membership">Enjoy yourself at FreeSpace? Now you can visit FreeSpace every day with your own FreeSpace Club Membership. Get exclusive access to your favorite FreeSpace outlet for less than $30 a day! For $300 you can use all of our facilities the entire month.</p>
+            <h2>Membership</h2>
+            <p>Enjoy yourself at FreeSpace? Now you can visit FreeSpace every day with your own FreeSpace Club Membership. Get exclusive access to your favorite FreeSpace outlet for less than $30 a day! For $300 you can use all of our facilities the entire month.</p>
             <form action="#Form">
                 <button class="button" >Become a member</button>
             </form> 
