--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FreeSpace Anticafe</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/controls.css">
     <link rel="stylesheet" type="text/css" href="css/img.css">
     <link rel="stylesheet" type="text/css" href="css/index.css">
@@ -12,33 +13,35 @@
 
 <body>
     <header>
-      <div class="header" id="header">
-        <h1>FreeSpace</h1>
-        <div class="link-container">
-            <a href="#Concept">Concept</a>
-            <a href="#What">What you can do</a>
-            <a href="#Rooms">Rooms</a>
-            <a href="#Pricing">Pricing</a>
-            <a href="#Events">Events</a>
-            <a href="#Gallery">Gallery</a>
-            <a href="#Contacts">Contacts</a>
+        <div class="header" id="header">
+            <h1>FreeSpace</h1>
+            <div class="link-container">
+                <a href="#Concept">Concept</a>
+                <a href="#What">What you can do</a>
+                <a href="#Rooms">Rooms</a>
+                <a href="#Pricing">Pricing</a>
+                <a href="#Events">Events</a>
+                <a href="#Gallery">Gallery</a>
+                <a href="#Contacts">Contacts</a>
+            </div>
         </div>
-
-      </div>        
-        <div class="header-bg">
-            <div id="header_bg">
-                <div class="hero">
-                    <div class="hero-inner">
-                        <div class="hero-text">
-                            EVERYTHING IS FREE.<br>Except for the time you spend.
+        
+        <div class="header-bottom">        
+            <div class="header-bg">
+                <div id="header_bg">
+                    <div class="hero">
+                        <div class="hero-inner">
+                            <div class="hero-text">
+                                EVERYTHING IS FREE.<br>Except for the time you spend.
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="hero-button">
-                    <div class="inbutton">
-                        <div class="inbutton-space">
-                            <div class="space-button">
-                                <button class="button">3D TOUR</button>
+                    <div class="hero-button">
+                        <div class="inbutton">
+                            <div class="inbutton-space">
+                                <div class="space-button">
+                                    <button class="button">3D TOUR</button>
+                                </div>
                             </div>
                         </div>
                     </div>
