--- a/index.html
+++ b/index.html
@@ -13,18 +13,42 @@
 
 <body>
     <header>
-        <div class="header" id="header">
-            <h1>FreeSpace</h1>
-            <div class="link-container">
-                <a href="#Concept">Concept</a>
-                <a href="#What">What you can do</a>
-                <a href="#Rooms">Rooms</a>
-                <a href="#Pricing">Pricing</a>
-                <a href="#Events">Events</a>
-                <a href="#Gallery">Gallery</a>
-                <a href="#Contacts">Contacts</a>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">FreeSpace</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active" href="#Concept">Concept</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#What">What you can do</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#Rooms">Rooms</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#Pricing">Pricing</a>
+                  </li>
+                   </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#Events">Events</a>
+                  </li>
+                   </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#Gallery">Gallery</a>
+                  </li>
+                   </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#Contacts">Contacts</a>
+                  </li>
+                </ul>
+              </div>
             </div>
-        </div>
+          </nav>
 
         <div class="header-bottom">        
             <div class="header-bg">
