Create background for WYGFF

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     </header>
     
     <main> 
-        <div class="concept">
+        <div id="Concept" class="concept">
             <div class="concept-block">
                 <div class="concept-text">
                     <h2>Concept</h2>
@@ -90,7 +90,7 @@
             </div>
         </div>
     
-        <div class="wcyd">
+        <div id="What" class="wcyd">
             <div class="wcyd-container">
                 <div class="wcyd-header">
                     <h2>What Can You Do</h2>
