add background in gallery

--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
             </div>
         </div>
               
-        <div  class="gallery" style="color: #964b00!important ">
+        <div  class="gallery">
             <h2 class="gallery-h2">Gallery</h2>
         
             <div class="img-gallery"><img class="barista" src="img/gallery/barista.jpg" alt="Barista"></div>
