--- a/index.html
+++ b/index.html
@@ -271,6 +271,72 @@
         </div>
 
         <div id="Rooms" class="our-rooms">
+            <div class="rooms-container">
+                <div class="rooms-header">
+                    <h2>Our rooms</h2>
+                </div>
+                <div class="container">
+
+                    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+                        <div class="col">
+                            <div class="card lounge-room">
+                                <div class="damn-image">
+                                    <img class="rooms" src="img/our-rooms/lounge-room.webp" alt="Lounge">
+                                </div>
+                                <div class="card-body">
+                                    <h3 class="h-rooms">Lounge room</h3>
+                                    <p class="p-rooms">Our spacious and light lounge room can accomodate of up to 20 people. Here, you can share your ideas or meet new interesting people.
+                                        <br><br>
+                                        area: 
+                                        <span>50 m²</span>
+                                        <br>
+                                        accommodates: 
+                                        <span>20 people</span></p>
+                                    <a class="a-rooms" href="">LEARN MORE</a>
+                                </div>
+                            </div>
+                        </div>
+                        
+                        <div class="col">
+                            <div class="card meeting-room">
+                                <div class="damn-image">
+                                    <img class="rooms" src="img/our-rooms/meeting-room.webp" alt="Meeting">
+                                </div>
+                                <div class="card-body">
+                                    <h3 class="h-rooms">Meeting room</h3>
+                                    <p class="p-rooms">A multifunctional meeting room sits 8 people and offers a quiet experience for small groups of people. Here, you can strike a deal or have a job interview.
+                                        <br><br>area: 
+                                        <span>22 m²</span>
+                                        <br>accommodates: 
+                                        <span>8 people</span></p>
+                                    <a class="a-rooms" href="">LEARN MORE</a>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col">
+                            <div class="card coworking-space">
+                                <div class="damn-image">
+                                    <img class="rooms" src="img/our-rooms/coworking-space.webp" alt="Coworking">
+                                </div>
+                                <div class="card-body">
+                                    <h3 class="h-rooms">Coworking space</h3>
+                                    <p class="p-rooms">We offer a coworking space for smaller groups of people, who need privacy and offline communication.
+                                        <br><br>area: 
+                                        <span>24 m²</span>
+                                        <br>accommodates: 
+                                        <span>8 people</span></p>
+                                    <a class="a-rooms" href="">LEARN MORE</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
+
+        <!--<div id="Rooms" class="our-rooms">
             <h2>Our rooms</h2>
             <div class="rooms">
                 <div class="lounge-room">
@@ -298,7 +364,7 @@
                     <img src="img/our-rooms/coworking-space.webp" alt="Coworking space">
                 </div>
             </div>
-        </div>
+        </div> -->
         
         <div class="membership"  >
             <h2>Membership</h2>
