--- a/index.html
+++ b/index.html
@@ -404,18 +404,45 @@
         </div>
 
         <div class="partners">
-            <img src="img/partners/garden.jfif" alt="Garden">
-            <h2>Partners</h2>
-            <div>
-                <img src="img/partners/melitta.svg" alt="Melitta">
-                <img src="img/partners/cafe-magazin.svg" alt="Cafe Magazin">
-                <img src="img/partners/jazz.svg" alt="Jazz">
-                <img src="img/partners/dell.svg" alt="Dell">
-                <img src="img/partners/bassett.svg" alt="Bassett">
-                <img src="img/partners/food-stores.svg" alt="Food Stores">
-                <img src="img/partners/man.svg" alt="Man">
-            </div>
-        </div>
+            <div class="partners-block">
+                <div class="text-block">
+                    <h2>Partners</h2>
+                </div>
+                <div id="partners-carousel" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img src="img/partners/melitta.svg" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="img/partners/cafe-magazin.svg" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="img/partners/jazz.svg" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="img/partners/dell.svg" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="img/partners/bassett.svg" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="img/partners/food-stores.svg" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="img/partners/man.svg" class="d-block w-100" alt="...">
+                      </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#partners-carousel" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#partners-carousel" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                    </button>
+                  </div>
+            </div> 
+        </div> 
 
         <div class="testimonials">
             <h2>Testimonials</h2>
