--- a/index.html
+++ b/index.html
@@ -373,32 +373,70 @@
             </div>
         </div>
         
-        <div id="Events" class="events-calendar">
-            <h2>Events calendar</h2>
-            <div class="events">
-                <div class="halloween-party">
-                    <img src="img/event-calendar/halloween.webp" alt="Halloween party">
-                    <p>Wednesday, October 31</p>
-                    <p>7pm - 11pm</p>
-                    <h3>Halloween Party</h3>
-                    <p>Put your spooky clothes on for our weekly Halloween Pyjama Party. We will have a wicked Movie Marathon, Witches Tarot readings, Face Painting, Board Games and Prizes. Not to mention our themed food, hot chocolate, pumpkin spiced lattes and more.</p>
-                    <button class="button">LEARN MORE</button>
+        <div id="Events" class="events">
+            <div class="events-container">
+                <div class="events-header">
+                    <h2>Events calendar</h2>
                 </div>
-                <div class="artist-support-party">
-                    <img src="img/event-calendar/artist.webp" alt="Artist Support Party">
-                    <p>Saturday, November 3</p>
-                    <p>4pm - 8pm</p>
-                    <h3>Artist Support Party</h3>
-                    <p>Whether you are an Artist, Musician, Manager, Venue Owner, Festival Organiser, Producer, Sound Engineer or just have a serious interest in helping, supporting, or working in the area of original music, then you are invited to join the Artist Support Network collective!</p>
-                    <button class="button">LEARN MORE</button>
-                </div>
-                <div class="floral-arrangement">
-                    <img src="img/event-calendar/flowers.webp" alt="Floral Arrangement">
-                    <p>Saturday, November 10</p>
-                    <p>11am - 1pm</p>
-                    <h3>Floral Arrangement</h3>
-                    <p>Learn how to create a rustic floral arrangement for a friend, special occasion, or just for your home! Your own gorgeous flower arrangements will cost almost nothing as you combine housewares with plants from the garden.</p>
-                    <button class="button">LEARN MORE</button>
+                <div class="container">
+                    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+                        <div class="col">
+                            <div class="card shadow-sm">
+                                <div class="ev-image">
+                                    <img class="img" src="img/event-calendar/halloween.webp" alt="Halloween party">
+                                </div>
+                                <div class="card-body">
+                                    <small class="text-muted">Wednesday, October 31|</small>
+                                    <small class="text-muted">7pm - 11pm</small>
+                                    <h3>Halloween Party</h3>
+                                    <p class="card-text">Put your spooky clothes on for our weekly Halloween Pyjama Party. We will have a wicked Movie Marathon, Witches Tarot readings, Face Painting, Board Games and Prizes. Not to mention our themed food, hot chocolate, pumpkin spiced lattes and more.</p>
+                                    <div class="d-flex justify-content-between align-items-center">
+                                        <div class="button">
+                                            <button class="button">LEARN MORE</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    
+                        <div class="col">
+                            <div class="card shadow-sm">
+                                <div class="ev-image">
+                                    <img class="img" src="img/event-calendar/artist.webp" alt="Artist Support Party">
+                                </div>
+                                <div class="card-body">
+                                    <small class="text-muted">Saturday, November 3|</small>
+                                    <small class="text-muted">4pm - 8pm</small>
+                                    <h3>Halloween Party</h3>
+                                    <p class="card-text">Whether you are an Artist, Musician, Manager, Venue Owner, Festival Organiser, Producer, Sound Engineer or just have a serious interest in helping, supporting, or working in the area of original music, then you are invited to join the Artist Support Network collective!</p>
+                                    <div class="d-flex justify-content-between align-items-center">
+                                        <div class="button">
+                                            <button class="button">LEARN MORE</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col">
+                            <div class="card shadow-sm">
+                                <div class="ev-image">
+                                    <img class="img" src="img/event-calendar/flowers.webp" alt="Floral Arrangement">
+                                </div>
+                                <div class="card-body">
+                                    <small class="text-muted">Saturday, November 10|</small>
+                                    <small class="text-muted">11am - 1pm</small>
+                                    <h3>Floral Arrangement</h3>
+                                    <p class="card-text">Learn how to create a rustic floral arrangement for a friend, special occasion, or just for your home! Your own gorgeous flower arrangements will cost almost nothing as you combine housewares with plants from the garden.</p>
+                                    <div class="d-flex justify-content-between align-items-center">
+                                        <div class="button">
+                                            <button class="button">LEARN MORE</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
