Fix img sixes in Events

--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
                         <div class="col">
                             <div class="card shadow-sm">
                                 <div class="ev-image">
-                                    <img class="img" src="img/event-calendar/halloween.webp" alt="Halloween party">
+                                    <img class="img" src="img/event-calendar/halloween.png" alt="Halloween party">
                                 </div>
                                 <div class="card-body">
                                     <small class="text-muted">Wednesday, October 31|</small>
@@ -402,7 +402,7 @@
                         <div class="col">
                             <div class="card shadow-sm">
                                 <div class="ev-image">
-                                    <img class="img" src="img/event-calendar/artist.webp" alt="Artist Support Party">
+                                    <img class="img" src="img/event-calendar/artist.png" alt="Artist Support Party">
                                 </div>
                                 <div class="card-body">
                                     <small class="text-muted">Saturday, November 3|</small>
@@ -421,7 +421,7 @@
                         <div class="col">
                             <div class="card shadow-sm">
                                 <div class="ev-image">
-                                    <img class="img" src="img/event-calendar/flowers.webp" alt="Floral Arrangement">
+                                    <img class="img" src="img/event-calendar/flowers.png" alt="Floral Arrangement">
                                 </div>
                                 <div class="card-body">
                                     <small class="text-muted">Saturday, November 10|</small>
