--- a/index.html
+++ b/index.html
@@ -592,13 +592,28 @@
             </div>
         </div>
 
-        <div id="Form" class="form-to-fill">
-            <h2>Enjoy yourself at FreeSpace?</h2>
-            <p>Get your own FreeSpace Club Membership.</p>
-            <br><input type="text" placeholder="Enter your full name*" required>
-            <br><input type="text" placeholder="Enter your phone number*" required>
-            <br><input type="text" placeholder="Enter your e-mail*" required>
-            <button class="button">Become a member</button>
+        <div id="Form" class="form">
+            <div class="form-container">
+                <div class="form-block">
+                    <div class="form-header">
+                        <h2>Enjoy yourself at FreeSpace?</h2>
+                    </div>
+                    <p>Get your own FreeSpace Club Membership.</p>
+                    <div class="form-to-fill">
+                        <div class="form-holder">
+                            <br><input type="text" placeholder="Enter your full name*" required>
+                        </div>
+                        <div class="form-holder">
+                            <br><input type="text" placeholder="Enter your phone number*" required>
+                        </div>
+                        <div class="form-holder">
+                            <br><input type="text" placeholder="Enter your e-mail*" required>
+                        </div>
+                        
+                        <button class="button">Become a member</button>    
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
     
