fix form css/html code

--- a/index.html
+++ b/index.html
@@ -610,13 +610,13 @@
                     <p>Get your own FreeSpace Club Membership.</p>
                     <div class="form-to-fill">
                         <div class="form-holder">
-                            <br><input type="text" placeholder="Enter your full name*" required>
+                            <input type="text" placeholder="Enter your full name*" required>
                         </div>
                         <div class="form-holder">
-                            <br><input type="text" placeholder="Enter your phone number*" required>
+                            <input type="text" placeholder="Enter your phone number*" required>
                         </div>
                         <div class="form-holder">
-                            <br><input type="text" placeholder="Enter your e-mail*" required>
+                            <input type="text" placeholder="Enter your e-mail*" required>
                         </div>
                         
                         <button class="button">Become a member</button>    
