--- a/index.html
+++ b/index.html
@@ -626,10 +626,9 @@
         </div>
     </main>
     
-    <footer> 
+    <footer class="columss"> 
         <div class="footer">
             <h1>FreeSpace</h1>
-             <div class="footer-link-conteiner">
                 <div class="footer-list">
                     <a href="#Concept">Concept</a>
                     <a href="#Pricing">Pricing</a>
@@ -644,9 +643,8 @@
                     <a href="#Rooms">Rooms</a>
                     <a href="#Gallery">Gallery</a>
                 </div>
-             </div>
             <div class="footer-email">
-                <span class="footer-span">Enter your email and get our latest news.</span><br>
+                <p class="footer-span">Enter your email and get our latest news.</p><br>
                 <div class="footer-email-button">
                 <input type="text" placeholder="Email*" required><br>
                 <button class="button">Subscribe</button>
