--- a/index.html
+++ b/index.html
@@ -577,10 +577,10 @@
                 <h2>Our Location</h2>
                 <div class="loc-parts">
                     <div class="loc-grid">
-                        <div class="map">Imaginary map</div>
+                        <div class="map" id="map" >Imaginary map</div>
                     </div>
                     <div class="loc-grid">
-                        <h2>FreeSpace</h2>
+                        <h3>FreeSpace</h3>
                         <h3>Address</h3>
                         <p>Spandauer Str. 8, 10178 Berlin</p>
                         <h3>Phone</h3>
@@ -635,6 +635,7 @@
             </div>
         </div>
     </footer>
+    <script src="../638-team-r/js/map.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
