idea map js ded

--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@
                 <h2>Our Location</h2>
                 <div class="loc-parts">
                     <div class="loc-grid">
-                        <div class="map" id="map" >Imaginary map</div>
+                        <div class="map" id="map" ><img src="../638-team-r/img/contacts/map.png"></div>
                     </div>
                     <div class="loc-grid">
                         <h3>FreeSpace</h3>
@@ -595,7 +595,7 @@
                         
                         <button class="soc-button"><img src="img/our-location/instagram.svg" alt="Instagram"></button>
                         <button class="soc-button"><img src="img/our-location/facebook.svg" alt="Facebook"></button>
-                        <button class="soc-button"><img src="img/our-location/youtube.svg" alt="Youtube"></button>
+                        <button class="soc-button"><img src="img/our-location/youtube.svg" alt="Youube"></button>
                     </div>
                 </div>
             </div>
