Fix button gallery

--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@
             </div> 
           </div>     
                 
-        <div  class="gallery">
+        <div  class="gallery" id="Gallery">
             <div class="gallery-container">
                 <h2 id="gallery-h2">Gallery</h2>
                 <div class="gallery-grid">
