Delete element end add temporary option

--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@
                 <h2>Our Location</h2>
                 <div class="loc-parts">
                     <div class="loc-grid">
-                    <div class="map" ><img src="../638-team-r/img/contacts/map.png"></div>
+                    <div class="map" ><p>imaginary map </p></div>
                     </div>
                     <div class="loc-grid">
                         <h3>FreeSpace</h3>
