--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@
                 <h2>Our Location</h2>
                 <div class="loc-parts">
                     <div class="loc-grid">
-                    <div class="map" ><p>imaginary map </p></div>
+                    <div class="map" ><a  href="https://www.google.com.ua/maps/@50.4851493,30.4721233,14z?hl=ru"> Click and go to the map <hr> </a></div>
                     </div>
                     <div class="loc-grid">
                         <h3>FreeSpace</h3>
