--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
             <div class="testi-text">
                 <h2>Testimonials</h2>
             </div>
-                <div id="testi-carousel" class="carousel slide" data-bs-ride="carousel">
+                <div class="testi-carousel" data-bs-ride="carousel">
                     <div class="carousel-indicators">
                         <button type="button" data-bs-target="#testi-carousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                         <button type="button" data-bs-target="#testi-carousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -532,7 +532,7 @@
                                 <div class="carousel-caption d-none d-md-block">
                                 
                                     <h3>Alice Grimes</h3>
-                                    <p>I love the concept of the place! Such a great way to awork on team projects. Nice people, cool snacks, great facilities!”</p></p>
+                                    <p>I love the concept of the place! Such a great way to awork on team projects. Nice people, cool snacks, great facilities!”</p>
                                 </div>
                             </div>
 
